--- a/docker.yaml
+++ b/docker.yaml
@@ -23,13 +23,13 @@
     - name: Log in to Docker Hub
       docker_login:
         registry_url: https://index.docker.io/v1/
-        username: sevenajay
-        password: dckr_pat_n3rrKF4kgVcDuAxxxxxxxg6eg
+        username: mohan2504
+        password: Mohan@123
       register: docker_login_result  
 
     - name: Push image
-      command: docker push sevenajay/petclinic7:latest
+      command: docker push mohan2504/petclinic7:latest
 
     - name: Run container
-      command: docker run -d --name pet1 -p 8081:8080 sevenajay/petclinic7:latest
+      command: docker run -d --name pet1 -p 8081:8080 mohan2504/petclinic7:latest
       
